<resources>
    <string name="app_name">diRead</string>
    <string name="tv_welcome">Welcome to diRead!</string>
    <string name="btn_next">Next</string>
    <string name="tv_login">Let\'s you in!</string>
    <string name="tv_register">Create your Account!</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_name">Name</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="have_account">Already have an account?</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="find_your_journal">Find your Journal</string>
    <string name="home">Home</string>
    <string name="collection">Collection</string>
    <string name="collection_2">COLLECTION</string>
    <string name="profile">Profile</string>
    <string name="cd_iv_photo">Photo User</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="journal_title">Journal Title</string>
    <string name="journal_abstract">Journal Abstract</string>
    <string name="logout">logout</string>
    <string name="diread">diRead</string>
    <string name="story">story</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Bookmark</string>
    <string name="tab_text_3">Profile</string>
    <string-array name="judul_jurnal">
        <item>Perilaku Sosial Anak Putus Sekolah</item>
        <item>Web Scraping, Text Mining, Akuisisi Informasi, Kategorisasi Informasi, Hidroponik</item>
        <item>ANALISIS USAHA AGROINDUSTRI TAHU DI DESA KAMPUNG </item>
        <item>Rapor Pendidikan Indonesia: Quo Vadis Kualitas Pendidikan </item>
        <item>Analisa Pengaruh Virtual Reality Terhadap Perkembangan </item>

        <item>Pengembangan Game Interaktif Wordwall untuk </item>
        <item>Strategi Literasi Budaya Anak Usia Dini melalui Pengembangan </item>
        <item>Pengembangan Game Edukasi 3D untuk Menumbuhkan Cinta </item>
        <item>Pengembangan Game Edukasi Berbasis Android untuk Meningkatkan Hasil Belajar Siswa di Sekolah Dasar</item>
        <item>WEBSITE E-COMMERCE MENGGUNAKAN MODEL VIEW </item>
    </string-array>
    <string name="diread_gmail_com">diread@gmail.com</string>
</resources>